--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ h1 {
   justify-content: left;
 }
 .register{
-  font-size: 3rem;
+  font-size: 5vw;
   font-weight: bold;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   align-items: center;
@@ -64,19 +64,19 @@ h1 {
   max-width: 2000px;
   min-width: 150px;
   margin-bottom: 0%;
-
-
 }
 .formulario{
-  margin-left: 2%;
+  margin-left: 3%;
   margin-top: 5%;
   margin-bottom: 2%;
   width: 50%;
   margin-right: 3%;
-  background-color: rgba(15, 11, 11, 0.778);;
+  background-color: rgba(15, 11, 11, 0.778);
+  max-width: 500px;
+  
 }
 form {
-  font-size: 1.3rem;
+  font-size: 1.7vw;
   margin-left: 4%;
   margin-top: 3%;
  width: 110%;
@@ -88,6 +88,7 @@ form {
 label {
   color: rgb(255, 255, 255);
    width: 240%;
+   margin-top: 1%;
 }
 
 input[type="text"],
@@ -97,10 +98,11 @@ select {
   margin-top: 3%;
   margin-bottom: 2%;
   width: 70%;
-  height: 37px;
+  height: 2.7vw;
+  max-height: 100px;
   background-color: rgba(247, 231, 231, 0.771);
   color: black;
-  font-size: 1.3rem;
+  font-size: 1.7vw;
   font-family: Arial, Helvetica, sans-serif;
   border: cadetblue;
   border-radius: 10px;
@@ -112,18 +114,18 @@ input[type="radio"]{
   width: 25px;
   height: 25px;
   border: 2px solid #efdada;
-  margin-bottom: 3%;
+  margin-bottom: 6%;
   margin-top: 3%;
 }
 
 input[type="number"]{
   margin-top: 1.5%;
   margin-bottom: 3%;
-  width: 15%;
-  height: 30px;
+  width: 12%;
+  height: 2.2vw;
   background-color: rgba(255, 255, 255, 0.833);
   color: black;
-  font-size: 1.5rem;
+  font-size: 1.7vw;
   border-radius: 10px;
 }
 
@@ -157,30 +159,33 @@ button:hover{
 .fotos{
  margin-left: 2%;
  margin-right: 3%;
+ width: 55%;
 }
 .conferencia{
   width: 100%;
-  height: 18%;
+  height: 30vw;
   margin-top: 8%;
  margin-right: 0%;
- max-width: 1000px;
- min-width: 50px;
- min-height: 380px;
- max-height: 100px;
+ max-width: 2000px;
+ min-width: 150px;
+ min-height: 10px;
+ max-height: 600px;
 }
 
 .cobro{
-  margin-top: 10%;
+  margin-top: 8%;
   margin-bottom: 10%;
   background-color: rgba(247, 231, 231, 0.661);
-  height: 250px;
+  height: 16vw;
   padding: 10px;
-  font-size: 15px;
+  font-size: 1.3vw;
   font-family: Arial, Helvetica, sans-serif;
   display:flex;
   justify-content: space-between;
   overflow: auto;
   box-shadow: 25px 15px 20px rgb(0, 0, 0);
+  min-height: 100px;
+  max-height: 750px;
 }
 
 .logprecio{
@@ -198,6 +203,7 @@ button:hover{
   color:white;
   margin-top: 5%;
   width: 60%;
+  height: 4vw;
 }
 
 button:hover.pago{
