--- a/src/index.css
+++ b/src/index.css
@@ -200,8 +200,8 @@ button:hover{
  
 }
 .preciolog{
-  width: 85%;
-  height: 60%;
+  width: 6vw;
+  height: 4vw;
 }
 
 .pago{
@@ -229,7 +229,7 @@ font-weight: bold;
 }
 
 .estadopago{
-  font-size: 14px;
+  font-size: 1.1vw;
   font-weight: bold;
   font-style: italic;
   color: black;
@@ -237,14 +237,14 @@ font-weight: bold;
 .factura{
   background-color: rgba(255, 255, 255, 0.785);
   color:black;
-  font-size: 18px;  
+  font-size: 1.5vw; 
   text-align: center;
   font-style: italic;
   font-weight: bold;
   color:blue;
 }
 .resumen{
-  font-size: 16px;
+  font-size: 1.1vw; 
   text-align: left;
   margin-left: 2%;
   margin-bottom: 6%;
@@ -256,5 +256,6 @@ font-weight: bold;
 Strong{
   color:blue;
   font-weight: bold;
-  font-size: 17px;
+  font-size: 1.2vw; 
 }
+
