--- a/src/index.css
+++ b/src/index.css
@@ -75,17 +75,18 @@ h1 {
   margin-left: 3%;
   margin-top: 5%;
   margin-bottom: 2%;
-  width: 50%;
+  width: 52%;
   margin-right: 3%;
   background-color: rgba(15, 11, 11, 0.778);
-  max-width: 500px;
+  max-width: 520px;
   
 }
 form {
   font-size: 1.7vw;
-  margin-left: 4%;
+  margin-left: 5%;
+  margin-right: 2%;
   margin-top: 3%;
- width: 110%;
+ width: 95%;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   min-height: 50vh;
@@ -95,7 +96,7 @@ form {
 label {
   color: rgb(255, 255, 255);
    width: 240%;
-   margin-top: 1%;
+   margin-top: 5%;
 }
 
 input[type="text"],
@@ -104,7 +105,7 @@ input[type="tel"],
 select {
   margin-top: 3%;
   margin-bottom: 2%;
-  width: 70%;
+  width: 75%;
   height: 2.7vw;
   max-height: 100px;
   background-color: rgba(247, 231, 231, 0.771);
@@ -118,11 +119,12 @@ select {
 input[type="checkbox"],
 input[type="radio"]{
 
-  width: 1.5vw;
-  height: 1.5vw;
+  width: 1.6vw;
+  height: 1.6vw;
   border: 2px solid #efdada;
-  margin-bottom: 6%;
+  margin-bottom: 4%;
   margin-top: 3%;
+  margin-left: 2%;
 }
 
 input[type="number"]{
@@ -136,11 +138,22 @@ input[type="number"]{
   border-radius: 10px;
 }
 
+input[type="text"].indicativo{
+  width: 13%;
+}
+input[type="tel"].telef{
+ margin-left: 2%;
+  width: 55%;
+}
 .tutoriales{
   width: 80%;
-  font-size: 20px;
+  font-size: 1.5vw;
 }
 
+.tut{
+  margin-top: 5%;
+  margin-bottom: 0px;
+}
 button{
   background-color: rgb(243, 243, 255);
   font-size: 90%;
@@ -258,4 +271,5 @@ Strong{
   font-weight: bold;
   font-size: 1.2vw; 
 }
+
 
