--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ h1 {
   
 }
 form {
-  font-size: 1.7vw;
+  font-size: 1.6vw;
   margin-left: 5%;
   margin-right: 2%;
   margin-top: 3%;
@@ -95,22 +95,22 @@ form {
 
 label {
   color: rgb(255, 255, 255);
-   width: 240%;
-   margin-top: 5%;
+   margin-top: 8%;
 }
 
 input[type="text"],
 input[type="email"],
 input[type="tel"],
+.DatePicker,
 select {
   margin-top: 3%;
-  margin-bottom: 2%;
+  margin-bottom: 3%;
   width: 75%;
-  height: 2.7vw;
+  height: 2.5vw;
   max-height: 100px;
   background-color: rgba(247, 231, 231, 0.771);
   color: black;
-  font-size: 1.7vw;
+  font-size: 1.55vw;
   font-family: Arial, Helvetica, sans-serif;
   border: cadetblue;
   border-radius: 10px;
@@ -122,7 +122,7 @@ input[type="radio"]{
   width: 1.6vw;
   height: 1.6vw;
   border: 2px solid #efdada;
-  margin-bottom: 4%;
+  margin-bottom: 3%;
   margin-top: 3%;
   margin-left: 2%;
 }
@@ -137,7 +137,10 @@ input[type="number"]{
   font-size: 1.7vw;
   border-radius: 10px;
 }
-
+.miembro{
+  margin-bottom: 25%;
+  height: 20%;
+}
 input[type="text"].indicativo{
   width: 13%;
 }
@@ -145,15 +148,42 @@ input[type="tel"].telef{
  margin-left: 2%;
   width: 55%;
 }
+.fechaNacimientoPicker {
+  border: 1px solid #ccc;
+  padding: 0.1vw 0.1vw;
+  margin-bottom: 15%;
+}
+
+
+.condicion {
+font-size: 1.2vw;
+}
+.condicion p{
+  margin-top: 0%;
+  margin-left: 3%;
+  margin-right: 15%;
+  text-align: justify;
+}
 .tutoriales{
   width: 80%;
-  font-size: 1.5vw;
+  font-size: 1.4vw;
+  margin-top: 0%;
+  margin-bottom: 0%;
+}
+.tutoriales p{
+  margin-left: 8%;
+  margin-right: 10%;
+  margin-top: 0%;
+  margin-bottom: 0%;
 }
 
 .tut{
   margin-top: 5%;
   margin-bottom: 0px;
 }
+
+
+
 button{
   background-color: rgb(243, 243, 255);
   font-size: 90%;
@@ -184,7 +214,7 @@ button:hover{
 .conferencia{
   width: 100%;
   height: 28vw;
-  margin-top: 8%;
+  margin-top: 10%;
  margin-right: 0%;
  max-width: 2000px;
  min-width: 150px;
@@ -193,10 +223,10 @@ button:hover{
 }
 
 .cobro{
-  margin-top: 8%;
+  margin-top: 13%;
   margin-bottom: 10%;
   background-color: rgba(247, 231, 231, 0.661);
-  height: 16vw;
+  height: 20vw;
   padding: 10px;
   font-size: 1.3vw;
   font-family: Arial, Helvetica, sans-serif;
@@ -207,7 +237,14 @@ button:hover{
   min-height: 100px;
   max-height: 750px;
 }
-
+.cobro h1{
+  font-size: 2.5vw;
+  text-align: center;
+  font-style: italic;
+  margin-bottom: 0%;
+  height: 15%;
+  color:rgb(0, 61, 82);
+}
 .logprecio{
   float:right;
  
@@ -271,5 +308,7 @@ Strong{
   font-weight: bold;
   font-size: 1.2vw; 
 }
+
+
 
 
